monday 1pm zach

--- a/src/css/houses.css
+++ b/src/css/houses.css
@@ -1,9 +1,11 @@
 h1{
     text-align: center;
 }
+h3{
+    text-align: center;
+    color: #ffffff;
+}
 .card {
     text-align: center;
-    color: #000000;
     background-image: radial-gradient(red 20%, black 60%);
-    border: 1px solid white;
 }
