--- a/src/components/Characters.css
+++ b/src/components/Characters.css
@@ -4,6 +4,8 @@
   background-attachment: fixed;
   background-size: cover;
   text-align: center;
-  color: white
-  
+  font-family: 'CustomFont', Arial, sans-serif;
+  font-weight:normal;
+  font-style:normal;
+ 
 }
